# rotins

./: .gitignore  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  test_requirements.txt  tox.ini
.github/workflows/: tests.yml
src/rotins/: __init__.py  core.py
tests/: conftest.py  test_rotins.py
tests/data/: t1_fwhm01  t1_fwhm05  t1_fwhm2  t1_norm  t1_vrot10  t1_vrot200  t1_vrot25fwhm02  t1_vrot50  t2_fwhm01  t2_fwhm05  t2_fwhm2  t2_norm  t2_vrot10  t2_vrot200  t2_vrot25fwhm02  t2_vrot50
