[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotins"
version = "1.0.0rc1"
description = "A Python package for rotational and instrumental broadening of stellar spectra"
readme = "README.md"
authors = [{ name = "Sriram Krishna", email = "email@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "astronomy",
    "spectroscopy",
    "stellar spectra",
    "broadening",
    "astrophysics",
]
requires-python = ">=3.7"
dependencies = ["numpy>=1.17.0", "scipy>=1.5.0"]

[project.urls]
Homepage = "https://github.com/yourusername/rotins"
Issues = "https://github.com/yourusername/rotins/issues"

[tool.pytest.ini_options]
minversion = "6.2.5"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:numpy.*:"]

[tool.mypy]
files = ["src/rotins", "tests"]
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rotins.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
